- fix issue with resizing of the canvas in chrome due to flexbox (put the canvas in a div) - remove the title of the sound list, and make it so that if it overflows (by adding lots of sounds), it shows a vertical scroll bar - update some ranges in the filter controls

--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,25 @@ body
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
-    max-width: 250px;
+    max-width: 300px;
+    }
+
+#SoundList
+    {
+    height: 390px;
+    overflow-y: auto;
+    margin: 0;
     }
 
 #SoundList li
     {
     cursor: pointer;
+    }
+
+#AudioFile
+    {
+    margin: 5px;
+    margin-bottom: 0;
     }
 
 #SoundSelected
